# vapp-server

./: .env  .gitignore  Cargo.toml  README.md  dump.rdb  index.html  rudata.sql
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
src/: main.rs
src/utils/: ast.rs  compress.rs  json_renderer.rs  lib.rs  mod.rs  parser.rs  renderer.rs
src/utils/handler/: user_handler.rs
src/utils/jdbc/: mod.rs  tabels.rs  traits.rs  users.rs
src/utils/jwt/: jwt.rs
src/utils/modules/: mod.rs
src/utils/modules/programs/: ast.rs  mod.rs  programs_handler.rs  programs_route.rs
src/utils/modules/users/: ast.rs  mod.rs  user_handler.rs  user_route.rs
src/utils/routes/: ast.rs  mod.rs  user_route.rs
src/utils/vapp/: ast.rs  json_renderer.rs  renderer.rs  vapp_route.rs
