[package]
name = "vapp_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
# zstd = "0.11.2+zstd.1.5.2"
zip = "0.6.2"
walkdir = "2.3.2"
hello_macro_derive = { path = "hello_macro_derive" }