[package]
name = "vapp_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
postgres = "0.19.4"
tokio-postgres = "0.7.7"
chrono={version="0.4.19",features=["serde"]}
dotenv="0.15.0"
sqlx={version="0.6.2",features=["postgres","runtime-tokio-rustls","macros","chrono"]}
num-bigint = "0.4.3"
zip = "0.6.2"
walkdir = "2.3.2"
async-trait = "0.1.57"
hello_macro_derive = { path = "hello_macro_derive" }