[package]
name = "vapp_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-redis = "0.12.0"
actix-session={version="0.5.0"}
# ,features=["redis-actor-session","cookie-session","redis-rs-session"]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
postgres = "0.19.4"
tokio-postgres = "0.7.7"
chrono={version="0.4.19",features=["serde"]}
dotenv="0.15.0"
sqlx={version="0.6.2",features=["postgres","runtime-tokio-rustls","macros","chrono"]}
rust-crypto = "0.2.36"
jsonwebtoken="8.1.1"
zip = "0.6.2"
walkdir = "2.3.2"
async-trait = "0.1.57"
lettre = "0.10.1"
lettre_email = "0.9"
hello_macro_derive = { path = "hello_macro_derive" }