[package]
name = "hello_macro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.99",feature=["extra-traits","full"]}
quote = "1.0.21"
proc-macro2 = "1.0.43"